pjsip_wizard.conf changed

--- a/exten/pjsip_wizard.conf
+++ b/exten/pjsip_wizard.conf
@@ -21,6 +21,9 @@ endpoint/send_rpid = yes
 endpoint/rewrite_contact = yes
 endpoint/inband_progress = yes
 endpoint/allow_subscribe = yes
+aor/max_contacts = 2
+aor/qualify_frequency = 30
+aor/authenticate_qualify = no
 
 ;各電話機個別設定
 [phone1](phone-defaults)
