--- a/exten/http.conf
+++ b/exten/http.conf
@@ -1,15 +1,12 @@
 [general]
 servername=Asterisk
-enabled=yes
-bindaddr=0.0.0.0
-bindport=8088
-enablestatic=yes
-prefix=
-tlsenable=yes
-tlsbindaddr=0.0.0.0:8089
-tlscertfile=/etc/asterisk/keys/asterisk.crt
-tlsprivatekey=/etc/asterisk/keys/asterisk.key
-tlscafile=/etc/asterisk/keys/ca.crt
-
-redirect = /cmp2k /static/cyber_mega_phone_2k/index.html
-redirect = /jsc /static/jscommunicator/index.html
+enabled=no
+;bindaddr=0.0.0.0
+;bindport=8088
+;enablestatic=yes
+;prefix=
+;tlsenable=yes
+;tlsbindaddr=0.0.0.0:8089
+;tlscertfile=/etc/asterisk/keys/asterisk.crt
+;tlsprivatekey=/etc/asterisk/keys/asterisk.key
+;tlscafile=/etc/asterisk/keys/ca.crt
