add intra group-dial

--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -95,8 +95,14 @@ exten => _X.,n,Set(CALLERID(num)=*0${CALLERID(num)})
 exten => _X.,n(dialgo),NoOp
 exten => _X.,n,Set(RGPT=${DB(ABS/IOP/RGPT)})
 exten => _X.,n,Gosub(macro-rgptcheck,s,1)
+;先頭がGならグループ
+exten => _X.,n,GotoIf($["${PEER:0:1}"="G"]?intgroup)
 exten => _X.,n,Gosub(macro-getexttech,s,1)
 exten => _X.,n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _X.,n,Hangup
+;内線グループへダイヤル
+exten => _X.,n(intgroup),NoOp(内線グループ)
+exten => _X.,n,Gosub(macro-groupdial,s,1(${PEER:1}))
 
 ;外線着信用コンテキスト
 [incoming]
