add outbound proxy to HGW

--- a/exten/pjsip_trunk_hgw.conf
+++ b/exten/pjsip_trunk_hgw.conf
@@ -12,6 +12,8 @@ type = aor
 contact = sip:#HGW-EXTEN#@#HGW-IPADDR#
 qualify_frequency = 30
 authenticate_qualify = no
+outbound_proxy = sip:#HGW-IPADDR#\;lr
+
 
 [hikari-hgw]
 type = auth
@@ -45,6 +47,7 @@ send_pai = yes
 inband_progress = yes
 from_user = #HGW-EXTEN#
 from_domain = #HGW-IPADDR#
+outbound_proxy = sip:#HGW-IPADDR#\;lr
 language = ja
 outbound_auth = hikari-hgw
 aors = hikari-hgw
