--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -4,8 +4,22 @@
 
 ;テストで適当な番号を振りたい場合にはここに書く
 ;includeすると他に負けるので、ここに書くこと
+exten => 8765,1,Gosub(macro-AquesTalkPi,s,1(明日の天気は晴れ)
+exten => 8765,n,MusicOnHold
+exten => 8765,n,Hangup
+;
+exten => 8766,1,NoOp
+exten => 8766,n,GoSub(macro-CHKHOLIDAY,s,1)
+exten => 8766,n,NoOp(${HOLIDAY})
+exten => 8766,n,Hangup
 
+exten => 8767,1,NoOp
+exten => 8767,n,Set(PJSIP_HEADER(add,Call-Info)=answer-after=0))
+exten => 8767,n,Set(PJSIP_HEADER(add,Alert-Info)=Intercom)
+exten => 8767,n,Dial(PJSIP/phone1&PJSIP/phone3&PJSIP/phone5)
+exten => 8767,n,Hangup
 
+exten => video-conference,1,Dial(PJSIP/phone3)
 ;
 exten => _X.,1,NoOp(内線発信部)
 ; Experimental Start
@@ -100,8 +114,14 @@ exten => *8228,hint,Custom:TCCOND
 [inhouse-did]
 exten => did-in,1,NoOp(ダイヤルイン着信処理)
 exten => did-in,n,Gosub(macro-cidnamecheck,s,1)
+exten => did-in,n,Set(CCIDNUM=${CALLERID(num)})
+exten => did-in,n,Set(CCIDNAME=${CALLERID(name)})
 exten => did-in,n,Set(CALLERID(name)=DI:${CALLERID(name)})
 exten => did-in,n,Set(EXT=${DIT})
+;Slack連携
+exten => did-in,n,Set(SLPOS="DIN")
+exten => did-in,n,Set(CHANNEL(hangup_handler_push)=di-afthang,s,1(${CCIDUMU}))
+exten => did-in,n,Gosub(sub-slack-in,s,1(${CCIDNUM} ${CCIDNAME} ダイヤルイン${EXT}))
 ;対象がグループか単独かをチェック
 ;頭がGの場合にはグループ着信
 exten => did-in,n,NoOp(${EXT:0:1})
