--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -41,6 +41,10 @@ exten => s,n,Set(CALLERID(name)=${CALLERID(num)})
 ;キーラベル取得
 exten => s,n(lnset),Set(KLBL=${DB(KEYTEL/KEYSYS${KID}/LABEL)})
 exten => s,n,Set(CALLERID(name)=${KLBL}${KID}:${DTN}${CALLERID(name)})
+;Slack連係
+exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/INCID)=${CALLERID(num)})
+exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM} ${CCIDNAME} ${KLBL}${KID}))
+;
 exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"="NOT_INUSE"]?ring)
 exten => s,n,Busy
 exten => s,n,Hangup
@@ -54,7 +58,7 @@ exten => s,n,Set(CHANNEL(hangup_handler_push)=ch-afthang,s,1(${KID}))
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/ORIGIN)=INCOMING)
 ;仮想電話機(Local ringnode)に対してダイヤル
 ;応答があればhintをINUSEに
-exten => s,n,Dial(Local/dummy${KID}@ringnode&Local/kcall${KID}@dialpool,,U(macro-devschange^${KID}^INUSE))
+exten => s,n,Dial(Local/dummy${KID}@ringnode&Local/kcall${KID}@dialpool,,xU(macro-devschange^${KID}^INUSE))
 exten => s,n,NoOp(end)
 
 
@@ -156,7 +160,10 @@ exten => s,n(backnu),Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=NOT_INUSE)
 ;解放された後にピア名を無しに
 ;PBX挙動時に誤ったピアがキーを確保するのを防止
 exten => s,n(nochg),Set(DB(KEYTEL/KEYSYS${ARG1}/PEER)=NONE)
-exten => s,n,Return
+;着信時の切断でSlackへ通知
+exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"!="INCOMING"]?doret)
+exten => s,n,Gosub(sub-slack-dc,s,1(${CALLERID(num)}))
+exten => s,n(doret),Return
 
 ;######## 特殊処理ノード ########
 ;鳴動や保留の『端』として使用するローカルチャネル
@@ -233,6 +240,9 @@ exten => keyhandle-RINGING,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-RINGING,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
 ;ピックアップによりチャネルが成立するがロックは解除する
 exten => keyhandle-RINGING,n,Set(GLOBAL(TRLOCK)=0)
+;Slack連係テスト(キーで応答)
+exten => keyhandle-RINGING,n,Set(ICID=${DB(KEYTEL/KEYSYS${KID}/INCID)})
+exten => keyhandle-RINGING,n,Gosub(sub-slack-ans,s,1(${ICID} ${EXT}))
 ;鳴動中のキーをピックアップ
 exten => keyhandle-RINGING,n,PickUpChan(Local/dummy${KID}@ringnode)
 
@@ -481,7 +491,7 @@ exten => _X.,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 ;回線種別取得
 exten => _X.,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
 ;exten => _X.,n,Dial(${OUTTECH}/${EXTEN}@${OUTTRUNK},,U(macro-markyou^${KID}))
-exten => _X.,n,Dial(${OUTTECH}/${KPFX}${TPFX}${EXTEN}@${OUTTRUNK},,U(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
+exten => _X.,n,Dial(${OUTTECH}/${KPFX}${TPFX}${EXTEN}@${OUTTRUNK},,XU(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
 ;メモ用に残し。GWによってはこのタイプが必要なケースがある。
 ;exten => _X.,n,Dial(${OUTTECH}/${OUTTRUNK}/${EXTEN},,U(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${OUTTECH})) )
 exten => _X.,n,Hangup
@@ -508,7 +518,7 @@ exten => _kcall[1-9],n,Set(EXT=${RNG})
 exten => _kcall[1-9],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall[1-9],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall[1-9],n,Gosub(macro-getexttech,s,1)
-exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1)U(macro-slackexten,s,1))
 exten => _kcall[1-9],n(donothing),NoOp
 ;10-16スロット用
 exten => _kcall1[0-6],1,NoOp(キー着信${EXTEN:5:2})
@@ -529,7 +539,7 @@ exten => _kcall1[0-6],n,Set(EXT=${RNG})
 exten => _kcall1[0-6],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall1[0-6],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall1[0-6],n,Gosub(macro-getexttech,s,1)
-exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1)U(macro-slackexten,s,1))
 exten => _kcall1[0-6],n(donothing),NoOp
 
 ;PJSIP,SIPで発信時にPPIを設定するためのルーチン(Dialから呼ばれる)
