--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -6,8 +6,12 @@ exten => s,1,NoOp(CID参照マクロ)
 exten => s,n,Set(CIDNAME=${DB(cidname/${CALLERID(num)})})
 exten => s,n,GotoIf($["${CIDNAME}" = ""]?noname)
 exten => s,n,Set(CALLERID(name)=${CIDNAME})
+exten => s,n,Set(CCIDNUM=${CALLERID(num)})
+exten => s,n,Set(CCIDNAME=${CIDNAME})
 exten => s,n,Goto(endmacro)
 exten => s,n(noname),Set(CALLERID(name)=${CALLERID(num)})
+exten => s,n,Set(CCIDNUM=${CALLERID(num)})
+exten => s,n,Set(CCIDNAME=${CALLERID(name)})
 exten => s,n(endmacro),Return
 
 ;DBに値が設定されている場合に回線側のCIDを設定するマクロ
@@ -185,15 +189,15 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})x${OPT})
+exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})x${OPT})U(macro-slackexten))
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="NOANSWER"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="CHANUNAVAIL"]?waitloop)
 exten => s,n,Goto(dobusy)
-;キーシステムではない着信ならマクロなし
-exten => s,n(notkeysys),Dial(${TGT},${TMO},x${OPT})
+;キーシステムではない着信ならキーマクロなし
+exten => s,n(notkeysys),Dial(${TGT},${TMO},U(macro-slackexten)x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -255,7 +259,7 @@ exten => s,n(addp),Set(OPT=${DB(ABS/GRP/OPT)})
 exten => s,n,GotoIf($["${FROM}"=""]?dodial)
 exten => s,n,GotoIf($["${FROM}"="0"]?dodial)
 ;キーシステムでの着信ならマクロ設定
-exten => s,n,Set(KMACRO=U(macro-markme^${FROM}) )
+exten => s,n,Set(KMACRO=U(macro-markme^${FROM})U(macro-slackexten) )
 exten => s,n(dodial),NoOp
 exten => s,n,Gosub(macro-getexttech,s,1)
 exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},x${OPT}${KMACRO})
@@ -315,7 +319,7 @@ exten => s,n(addp),Set(OPT=${DB(ABS/GRP/OPT)})
 exten => s,n,GotoIf($["${FROM}"=""]?dodial)
 exten => s,n,GotoIf($["${FROM}"="0"]?dodial)
 ;キーシステムでの着信ならマクロ設定
-exten => s,n,Set(KMACRO=U(macro-markme^${FROM}) )
+exten => s,n,Set(KMACRO=U(macro-markme^${FROM})U(macro-slackexten) )
 exten => s,n(dodial),NoOp
 exten => s,n,Set(DB(ABS/GRP/${GRP}/LAST)=$[${i}+1])
 exten => s,n,Gosub(macro-getexttech,s,1)
@@ -365,6 +369,56 @@ exten => s,n(swday),Set(HOLIDAY=${WDAY})
 ;マクロ終了
 exten => s,n(endm),NoOp(${HOLIDAY})
 exten => s,n,Return
+
+;Slack連携用
+;内線応答処理(通常)
+[macro-slackexten]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?backm)
+exten => s,n,Set(EXTLEN=${LEN(${CONNECTEDLINE(num)})})
+exten => s,n,GotoIf($[${EXTLEN} < 8]?backm)
+exten => s,n,Set(CCHK=${CALLERID(num):0:5})
+exten => s,n,GotoIf($["${CCHK}"="s"]?domacro)
+exten => s,n,GotoIf($["${SLPOS}"="DID"]?domacro)
+exten => s,n,GotoIf($["${CCHK}"!="kcall"]?backm)
+exten => s,n(domacro),Set(PEER=${CUT(CHANNEL(name),/,2-)})
+exten => s,n,Set(PEER=${CUT(PEER,-,1)})
+exten => s,n,Gosub(macro-peer2ext,s,1)
+exten => s,n,Set(SLCID=${CONNECTEDLINE(num)})
+exten => s,n,Set(CCHK=${SLCID:0:2})
+exten => s,n,GotoIf($["${CCHK}"!="*5"]?norep)
+exten => s,n,Set(SLCID=${CONNECTEDLINE(num):4})
+exten => s,n(norep),NoOp
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-ans.php ${SLCID} ${EXT})
+exten => s,n(backm),Return
+;着信通知
+[sub-slack-in]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,GotoIf($["${ARG1}"=""]?doret)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-in.php ${ARG1} ${ARG2} ${ARG3})
+exten => s,n(doret),Return
+;切断通知
+[sub-slack-dc]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,GotoIf($["${ARG1}"=""]?doret)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-dc.php ${ARG1} ${ARG2})
+exten => s,n(doret),Return
+;応答通知(キー)
+[sub-slack-ans]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,GotoIf($["${ARG1}"=""]?doret)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-ans.php ${ARG1} ${ARG2})
+exten => s,n(doret),Return
+;ダイヤルイン用ハングアップハンドラ
+;着信時の切断でSlackへ通知
+[di-afthang]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-dc.php ${CCIDNUM})
+exten => s,n(doret),Return
 
 ;Experimental
 ;メッセージングサポート
