--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -121,6 +121,8 @@ exten => s,n,Set(TPFX=${DB(ABS/TRUNK/PFX/${OUTTRUNK})})
 exten => s,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 ;回線種別取得
 exten => s,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
+;Slack連携
+exten => s,n,Gosub(sub-slack-dout,s,1(${DESTNUM},${EXT},外線${KID}))
 ;exten => s,n,Dial(${OUTTECH}/${TPFX}${DESTNUM}@${OUTTRUNK},${DIALOPT},U(macro-markyou^${KID}))
 exten => s,n,Dial(${OUTTECH}/${KPFX}${TPFX}${DESTNUM}@${OUTTRUNK},${DIALOPT},U(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
 exten => s,n(nogo),Hangup
@@ -490,6 +492,8 @@ exten => _X.,n,Set(TPFX=${DB(ABS/TRUNK/PFX/${OUTTRUNK})})
 exten => _X.,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 ;回線種別取得
 exten => _X.,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
+;Slack連携
+exten => _X.,n,Gosub(sub-slack-dout,s,1(${EXTEN},${ME},${KLBL}${KID}))
 ;exten => _X.,n,Dial(${OUTTECH}/${EXTEN}@${OUTTRUNK},,U(macro-markyou^${KID}))
 exten => _X.,n,Dial(${OUTTECH}/${KPFX}${TPFX}${EXTEN}@${OUTTRUNK},,XU(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
 ;メモ用に残し。GWによってはこのタイプが必要なケースがある。
