--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -412,6 +412,12 @@ exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
 exten => s,n,GotoIf($["${ARG1}"=""]?doret)
 exten => s,n,System(php /var/lib/asterisk/slack/astslack-ans.php ${ARG1} ${ARG2})
 exten => s,n(doret),Return
+;発信時のSlackへの通知(あまり重要視していない)
+[sub-slack-dout]
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${ARG2} ${ARG3})
+exten => s,n(doret),Return
 ;ダイヤルイン用ハングアップハンドラ
 ;着信時の切断でSlackへ通知
 [di-afthang]
