--- a/exten/extensions_outgoing.conf
+++ b/exten/extensions_outgoing.conf
@@ -65,9 +65,11 @@ exten => s,n,Congestion
 exten => s,n(trunkgo),Set(TPFX=${DB(ABS/TRUNK/PFX/${TRUNK})})
 ;外線発信に変数をセット
 exten => s,n,Set(_THISPOSITION=OUTBOUND)
+;Slack連携
+exten => s,n,Gosub(sub-slack-dout,s,1(${DESTNUM},${EXT},${PFX}発信))
 ;キーシステムを使わないのでキー連動マクロは必要なし
 ;PPIを設定するマクロは実行
-exten => s,n,Dial(${TECH}/${TPFX}${DESTNUM}@${TRUNK},,b(add-ppiheader^addp^1(${OGCID},${LTYP},${TECH})))
+exten => s,n,Dial(${TECH}/${TPFX}${DESTNUM}@${TRUNK},,Xb(add-ppiheader^addp^1(${OGCID},${LTYP},${TECH})))
 
 
 ;拠点間内線発信
