--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -416,7 +416,8 @@ exten => s,n(doret),Return
 [sub-slack-dout]
 exten => s,1,NoOp
 exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${ARG2} ${ARG3})
+exten => s,n,Set(CIDNAME=${DB(cidname/${ARG1})})
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${CIDNAME} ${ARG2} ${ARG3})
 exten => s,n(doret),Return
 ;ダイヤルイン用ハングアップハンドラ
 ;着信時の切断でSlackへ通知
