--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -95,9 +95,9 @@ exten => s,n,Playback(silence/1)
 exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcrmessage)
 exten => s,n,Record(/var/spool/asterisk/recording/${UNIQUEID}.wav,,,k)
 exten => s,n,Playback(silence/1)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-vm.php ${CCIDNUM} /var/spool/asterisk/recording/${UNIQUEID}.wav)
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-vm.php ${CCIDNUM} ${CCIDNAME} /var/spool/asterisk/recording/${UNIQUEID}.wav)
 exten => h,1,GotoIf($["${RECORD_STATUS}"!="HANGUP"]?endslack)
-exten => h,n,System(php /var/lib/asterisk/slack/astslack-vm.php ${CCIDNUM} /var/spool/asterisk/recording/${UNIQUEID}.wav)
+exten => h,n,System(php /var/lib/asterisk/slack/astslack-vm.php ${CCIDNUM} ${CCIDNAME} /var/spool/asterisk/recording/${UNIQUEID}.wav)
 exten => h,n(endslack),NoOp
 exten => h,n,GotoIf($["${DB(ABS/SLACKVMRM)}"!="1"]?endslack2)
 exten => h,n,System(rm -f /var/spool/asterisk/recording/${UNIQUEID}.wav)
