--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -417,7 +417,9 @@ exten => s,n(doret),Return
 exten => s,1,NoOp
 exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
 exten => s,n,Set(CIDNAME=${DB(cidname/${ARG1})})
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${CIDNAME} ${ARG2} ${ARG3})
+exten => s,n,GotoIf($["${CIDNAME}"!=""]?dogo)
+exten => s,n,Set(CIDNAME=不明)
+exten => s,n(dogo),System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${CIDNAME} ${ARG2} ${ARG3})
 exten => s,n(doret),Return
 ;ダイヤルイン用ハングアップハンドラ
 ;着信時の切断でSlackへ通知
