--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -43,7 +43,7 @@ exten => s,n(lnset),Set(KLBL=${DB(KEYTEL/KEYSYS${KID}/LABEL)})
 exten => s,n,Set(CALLERID(name)=${KLBL}${KID}:${DTN}${CALLERID(name)})
 ;Slack連係
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/INCID)=${CALLERID(num)})
-exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM} ${CCIDNAME} ${KLBL}${KID}))
+exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM} ${CCIDNAME} ${KLBL}${KID} key${KID}))
 ;
 exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"="NOT_INUSE"]?ring)
 exten => s,n,Busy
@@ -414,6 +414,24 @@ exten => _**key1[0-6],1,NoOp(キー処理)
 exten => _**key1[0-6],n,Gosub(macro-extcheck,s,1)
 exten => _**key1[0-6],n,Set(KID=${EXTEN:5:12)
 exten => _**key1[0-6],n,Goto(key-handler,keyhandle,1)
+
+;Slack対応:トレーリングするスラッシュを無視したい
+exten => _key1.,1,Goto(key1,1)
+exten => _key2.,1,Goto(key2,1)
+exten => _key3.,1,Goto(key3,1)
+exten => _key4.,1,Goto(key4,1)
+exten => _key5.,1,Goto(key5,1)
+exten => _key6.,1,Goto(key6,1)
+exten => _key7.,1,Goto(key7,1)
+exten => _key8.,1,Goto(key8,1)
+exten => _key9.,1,Goto(key9,1)
+exten => _key10.,1,Goto(key10,1)
+exten => _key11.,1,Goto(key11,1)
+exten => _key12.,1,Goto(key12,1)
+exten => _key13.,1,Goto(key13,1)
+exten => _key14.,1,Goto(key14,1)
+exten => _key15.,1,Goto(key15,1)
+exten => _key16.,1,Goto(key16,1)
 
 ;BLFが使用できない電話機からキー動作させるための番号(561～568)
 ;1-9スロット
