local ring node function add

--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -8,18 +8,11 @@ exten => 8765,1,Gosub(macro-AquesTalkPi,s,1(明日の天気は晴れ)
 exten => 8765,n,MusicOnHold
 exten => 8765,n,Hangup
 ;
-exten => 8766,1,NoOp
-exten => 8766,n,GoSub(macro-CHKHOLIDAY,s,1)
-exten => 8766,n,NoOp(${HOLIDAY})
-exten => 8766,n,Hangup
-
-exten => 8767,1,NoOp
-exten => 8767,n,Set(PJSIP_HEADER(add,Call-Info)=answer-after=0))
-exten => 8767,n,Set(PJSIP_HEADER(add,Alert-Info)=Intercom)
-exten => 8767,n,Dial(PJSIP/phone1&PJSIP/phone3&PJSIP/phone5)
-exten => 8767,n,Hangup
-
-exten => video-conference,1,Dial(PJSIP/phone3)
+;特殊ノード(Local Ring)
+exten => localring,1,NoOp(localring)
+exten => localring,n(lp1),Ringing()
+exten => localring,n,Wait(10)
+exten => localring,n,Goto(lp1)
 ;
 exten => _X.,1,NoOp(内線発信部)
 ; Experimental Start
