add some functions

--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -50,6 +50,8 @@ exten => s,n,Busy
 exten => s,n,Hangup
 ;DEVSTATEを鳴動中に
 exten => s,n(ring),Set(DEVICE_STATE(Custom:KEYSYS${KID})=RINGING)
+;Slack連携
+exten => s,n,Gosub(sub-slack-key,s,1(${KID},RINGING))
 ;鳴動チャネルを保存
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/ID)=${CHANNEL})
 ;ハングアップ後処理ハンドラ挿入
@@ -93,6 +95,7 @@ exten => s,n,Congestion
 exten => s,n,Hangup
 
 exten => s,n(outok),Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+exten => s,n,Gosub(sub-slack-key,s,1(${KID},INUSE))
 exten => s,n,Gosub(macro-markme,s,1(${KID}))
 exten => s,n,Set(CHANNEL(hangup_handler_push)=ch-afthang,s,1(${KID}))
 ;経路をマーク
@@ -133,6 +136,10 @@ exten => s,n(nogo),Hangup
 [macro-devschange]
 exten => s,1,NoOp
 exten => s,n,Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=${ARG2})
+;Slack連携
+exten => s,n,Gosub(sub-slack-key,s,1(${ARG1},${ARG2}))
+;デバッグ用
+;exten => s,n,DumpChan()
 exten => s,n,Return
 
 ;『普通に』着信した場合に自局をマークさせる
@@ -159,6 +166,8 @@ exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"!="ONHOLD"]?backnu)
 exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"!="INCOMING"]?nochg)
 ;解放されたら未使用に
 exten => s,n(backnu),Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=NOT_INUSE)
+;Slack連携
+exten => s,n,Gosub(sub-slack-key,s,1(${ARG1},NOT_INUSE))
 ;解放された後にピア名を無しに
 ;PBX挙動時に誤ったピアがキーを確保するのを防止
 exten => s,n(nochg),Set(DB(KEYTEL/KEYSYS${ARG1}/PEER)=NONE)
@@ -260,6 +269,8 @@ exten => keyhandle-INUSE,n,ChannelRedirect(${DB(KEYTEL/KEYSYS${KID}/ID)},holdnod
 exten => keyhandle-INUSE,n,GotoIf($["${CHANNELREDIRECT_STATUS}"!="SUCCESS"]?noredir)
 ;DEVSTATEを保留状態に変更
 exten => keyhandle-INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=ONHOLD)
+;Slack連携
+exten => keyhandle-INUSE,n,Gosub(sub-slack-key,s,1(${KID},ONHOLD))
 ;再度ピアを自分のものに書き直し(この処理要る？？)
 exten => keyhandle-INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER)})
@@ -303,6 +314,8 @@ exten => keyhandle-ONHOLD,1,NoOp
 exten => keyhandle-ONHOLD,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-ONHOLD,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
 exten => keyhandle-ONHOLD,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+;Slack連携
+exten => keyhandle-ONHOLD,n,Gosub(sub-slack-key,s,1(${KID},INUSE))
 ;ピックアップによりチャネルが成立するがロックは解除する
 exten => keyhandle-ONHOLD,n,Set(GLOBAL(TRLOCK)=0)
 ;保留中のキーをピックアップする
@@ -313,6 +326,8 @@ exten => keyhandle-ONHOLD,n,PickUpChan(Local/rhold${KID}@holdnode)
 exten => keyhandle-NOT_INUSE,1,NoOp
 ;該当キーを使用中に
 exten => keyhandle-NOT_INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+;Slack連携
+exten => keyhandle-NOT_INUSE,n,Gosub(sub-slack-key,s,1(${KID},OUTGOING,PENDING))
 ;通話中のピアを自局にセット
 exten => keyhandle-NOT_INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-NOT_INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
@@ -330,6 +345,8 @@ exten => h,1,NoOp
 exten => h,n,GotoIf($["${STAT}"="WASDISA"]?cleanup,1)
 ;DISAで何も実行しなかった場合のクリーンナップ
 exten => cleanup,1,Set(DEVICE_STATE(Custom:KEYSYS${KID})=NOT_INUSE)
+;Slack連携
+exten => cleanup,n,Gosub(sub-slack-key,s,1(${KID},NOT_INUSE,PENDING))
 exten => cleanup,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=NONE)
 
 ;キーハンドラ終了時に排他解除するマクロ
@@ -502,6 +519,8 @@ exten => _X.,n,Set(CALLERID(name)=${OGCID})
 ;発信処理
 exten => _X.,n,NoOp(発信開始)
 exten => _X.,n,Set(_THISPOSITION=OUTBOUND)
+;Slack連携
+exten => _X.,n,Gosub(sub-slack-key,s,1,(${KID},OUTGOING,${EXTEN}))
 ;相手先CID強制設定
 exten => _X.,n,Gosub(macro-cndid,s,1(${KID},${EXTEN}))
 ;トランクプレフィクス取得
@@ -510,6 +529,8 @@ exten => _X.,n,Set(TPFX=${DB(ABS/TRUNK/PFX/${OUTTRUNK})})
 exten => _X.,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 ;回線種別取得
 exten => _X.,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
+;発信先番号保持
+exten => _X.,n,Set(DB(KEYTEL/KEYSYS${KID}/DISANUM)=${EXTEN})
 ;Slack連携
 exten => _X.,n,Gosub(sub-slack-dout,s,1(${EXTEN},${ME},${KLBL}${KID}))
 ;exten => _X.,n,Dial(${OUTTECH}/${EXTEN}@${OUTTRUNK},,U(macro-markyou^${KID}))
