--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -396,7 +396,7 @@ exten => s,n(backm),Return
 exten => s,1,NoOp
 exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
 exten => s,n,GotoIf($["${ARG1}"=""]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-in.php ${ARG1} ${ARG2} ${ARG3})
+exten => s,n,System(php /var/lib/asterisk/slack/astslack-in2.php ${ARG1} ${ARG2} ${ARG3} ${ARG4})
 exten => s,n(doret),Return
 ;切断通知
 [sub-slack-dc]
@@ -427,6 +427,28 @@ exten => s,n(doret),Return
 exten => s,1,NoOp
 exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
 exten => s,n,System(php /var/lib/asterisk/slack/astslack-dc.php ${CCIDNUM})
+exten => s,n(doret),Return
+;Slackラインキーサポート
+[sub-slack-key]
+;KEYID STATE
+exten => s,1,NoOp
+exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
+exten => s,n,GotoIf($["${ARG3}"="PENDING"]?noncid)
+exten => s,n,GotoIf($["${ARG2}"="OUTGOING"]?skipincid)
+exten => s,n,GotoIf($["${ARG2}"="NOT_INUSE"]?noncid)
+exten => s,n,GotoIf($[{DB(KEYTEL/KEYSYS${KID}/ORIGIN)}=DISA]?disacid)
+exten => s,n,Set(TCIDN=${DB(KEYTEL/KEYSYS${ARG1}/INCID)})
+exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
+exten => s,n,Goto(doexec)
+exten => s,n(skipincid),Set(TCIDN=${ARG3})
+exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
+exten => s,n,Goto(doexec)
+exten => s,n(disacid),Set(TCIDN=${DB(KEYTEL/KEYSYS${KID}/DISANUM)})
+exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
+exten => s,n,Goto(doexec)
+exten => s,n(noncid),Set(TCIDN="-")
+exten => s,n,Set(TCIDM="=")
+exten => s,n(doexec),System(php /var/lib/asterisk/slack/astslack-keystat.php ${ARG1} ${ARG2} ${TCIDN} ${TCIDM})
 exten => s,n(doret),Return
 
 ;Experimental
