some minor bug fix

--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -43,7 +43,7 @@ exten => s,n(lnset),Set(KLBL=${DB(KEYTEL/KEYSYS${KID}/LABEL)})
 exten => s,n,Set(CALLERID(name)=${KLBL}${KID}:${DTN}${CALLERID(name)})
 ;Slack連係
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/INCID)=${CALLERID(num)})
-exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM} ${CCIDNAME} ${KLBL}${KID} key${KID}))
+exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM},${CCIDNAME},"(${KID})${KLBL}",key${KID}))
 ;
 exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"="NOT_INUSE"]?ring)
 exten => s,n,Busy
