--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -436,8 +436,8 @@ exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
 exten => s,n,GotoIf($["${ARG3}"="PENDING"]?noncid)
 exten => s,n,GotoIf($["${ARG2}"="OUTGOING"]?skipincid)
 exten => s,n,GotoIf($["${ARG2}"="NOT_INUSE"]?noncid)
-exten => s,n,GotoIf($[{DB(KEYTEL/KEYSYS${KID}/ORIGIN)}=DISA]?disacid)
-exten => s,n,Set(TCIDN=${DB(KEYTEL/KEYSYS${ARG1}/INCID)})
+exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"="DISA"]?disacid)
+exten => s,n,Set(TCIDN=${DB(KEYTEL/KEYSYS${KID}/INCID)})
 exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
 exten => s,n,Goto(doexec)
 exten => s,n(skipincid),Set(TCIDN=${ARG3})
