--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -97,8 +97,9 @@ exten => _X.,n,Set(RGPT=${DB(ABS/IOP/RGPT)})
 exten => _X.,n,Gosub(macro-rgptcheck,s,1)
 ;先頭がGならグループ
 exten => _X.,n,GotoIf($["${PEER:0:1}"="G"]?intgroup)
+;単独内線着信
 exten => _X.,n,Gosub(macro-getexttech,s,1)
-exten => _X.,n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _X.,n,Dial(${EXTTECH}/${PEER},,xb(macro-setringpattern,${RGPT},1))
 exten => _X.,n,Hangup
 ;内線グループへダイヤル
 exten => _X.,n(intgroup),NoOp(内線グループ)
@@ -114,6 +115,8 @@ exten => _X.,n,NoOp(${CALLERID(num)})
 exten => _X.,n,NoOp(${CALLERID(name)})
 exten => _X.,n,Set(INCIDN=${CALLERID(num)})
 exten => _X.,n,Set(INCID=${CALLERID(num)})
+;着信番号ログ
+exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : INCOMING CALL - ${CALLERID(num)}" >> /var/log/asterisk/call_incoming.log)
 ;;
 ;外線着信を変数にセット
 exten => _X.,n,Set(THISPOSITION=INBOUND)
