--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -117,6 +117,7 @@ exten => _X.,n,Set(INCIDN=${CALLERID(num)})
 exten => _X.,n,Set(INCID=${CALLERID(num)})
 ;着信番号ログ
 exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : INCOMING CALL - ${CALLERID(num)}" >> /var/log/asterisk/call_incoming.log)
+exten => _X.,n,System(chmod g+w /var/log/asterisk/call_incoming.log)
 ;;
 ;外線着信を変数にセット
 exten => _X.,n,Set(THISPOSITION=INBOUND)
@@ -138,6 +139,7 @@ exten => _X.,n,GotoIf($["${RET}"!="1"]?blcont)
 exten => _X.,n,GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
 exten => _X.,n,Log(NOTICE,"CALL BLOCKED - ${CALLERID(num)}")
 exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : CALL BLOCKED - ${CALLERID(num)}" >> /var/log/asterisk/call_reject.log)
+exten => _X.,n,System(chmod g+w /var/log/asterisk/call_reject.log)
 ;着信拒否時の独自コンテキストチェック
 exten => _X.,n(blj1),Set(BLC=${DB(ABS/BLC)})
 exten => _X.,n,GotoIf($["${BLC}"!=""]?${BLC},s,1)
