slack notify changed

--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -173,9 +173,14 @@ exten => _X.,n,GotoIf($["${TCHC}"="1"]?tcaonly,s,1)
 exten => _X.,n,GotoIf($["${TCHC}"="2"]?tcvm,s,1)
 ;条件にあわなければ通常処理
 
+
 ;ダイヤルイン着信チェック
 ;ダイヤルイン着信の場合にはキー処理させない
 exten => _X.,n(dcheck),NoOp(ダイヤルインチェック)
+;着信通知外部処理呼出
+;キー着信前でhookしておく
+exten => _X.,n,GoSub(external-notify,s,1(${INCID}))
+;
 exten => _X.,n,Set(DIT=${DB(ABS/DID/${TARGET})})
 exten => _X.,n,GotoIf($["${DIT}"=""]?checkany)
 ;ダイヤルイン先内線がある場合には内線のダイヤルイン着信処理へ
