--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -189,7 +189,7 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})x${OPT})U(macro-slackexten))
+exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})x${OPT}))
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -197,7 +197,7 @@ exten => s,n,GotoIf($["${DIALSTATUS}"="NOANSWER"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="CHANUNAVAIL"]?waitloop)
 exten => s,n,Goto(dobusy)
 ;キーシステムではない着信ならキーマクロなし
-exten => s,n(notkeysys),Dial(${TGT},${TMO},U(macro-slackexten)x${OPT})
+exten => s,n(notkeysys),Dial(${TGT},${TMO},x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -259,7 +259,7 @@ exten => s,n(addp),Set(OPT=${DB(ABS/GRP/OPT)})
 exten => s,n,GotoIf($["${FROM}"=""]?dodial)
 exten => s,n,GotoIf($["${FROM}"="0"]?dodial)
 ;キーシステムでの着信ならマクロ設定
-exten => s,n,Set(KMACRO=U(macro-markme^${FROM})U(macro-slackexten) )
+exten => s,n,Set(KMACRO=U(macro-markme^${FROM}))
 exten => s,n(dodial),NoOp
 exten => s,n,Gosub(macro-getexttech,s,1)
 exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},x${OPT}${KMACRO})
@@ -319,7 +319,7 @@ exten => s,n(addp),Set(OPT=${DB(ABS/GRP/OPT)})
 exten => s,n,GotoIf($["${FROM}"=""]?dodial)
 exten => s,n,GotoIf($["${FROM}"="0"]?dodial)
 ;キーシステムでの着信ならマクロ設定
-exten => s,n,Set(KMACRO=U(macro-markme^${FROM})U(macro-slackexten) )
+exten => s,n,Set(KMACRO=U(macro-markme^${FROM}))
 exten => s,n(dodial),NoOp
 exten => s,n,Set(DB(ABS/GRP/${GRP}/LAST)=$[${i}+1])
 exten => s,n,Gosub(macro-getexttech,s,1)
@@ -370,86 +370,16 @@ exten => s,n(swday),Set(HOLIDAY=${WDAY})
 exten => s,n(endm),NoOp(${HOLIDAY})
 exten => s,n,Return
 
-;Slack連携用
-;内線応答処理(通常)
-[macro-slackexten]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?backm)
-exten => s,n,Set(EXTLEN=${LEN(${CONNECTEDLINE(num)})})
-exten => s,n,GotoIf($[${EXTLEN} < 8]?backm)
-exten => s,n,Set(CCHK=${CALLERID(num):0:5})
-exten => s,n,GotoIf($["${CCHK}"="s"]?domacro)
-exten => s,n,GotoIf($["${SLPOS}"="DID"]?domacro)
-exten => s,n,GotoIf($["${CCHK}"!="kcall"]?backm)
-exten => s,n(domacro),Set(PEER=${CUT(CHANNEL(name),/,2-)})
-exten => s,n,Set(PEER=${CUT(PEER,-,1)})
-exten => s,n,Gosub(macro-peer2ext,s,1)
-exten => s,n,Set(SLCID=${CONNECTEDLINE(num)})
-exten => s,n,Set(CCHK=${SLCID:0:2})
-exten => s,n,GotoIf($["${CCHK}"!="*5"]?norep)
-exten => s,n,Set(SLCID=${CONNECTEDLINE(num):4})
-exten => s,n(norep),NoOp
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-ans.php ${SLCID} ${EXT})
-exten => s,n(backm),Return
-;着信通知
-[sub-slack-in]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,GotoIf($["${ARG1}"=""]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-in2.php ${ARG1} ${ARG2} ${ARG3} ${ARG4})
-exten => s,n(doret),Return
-;切断通知
-[sub-slack-dc]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,GotoIf($["${ARG1}"=""]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-dc.php ${ARG1} ${ARG2})
-exten => s,n(doret),Return
-;応答通知(キー)
-[sub-slack-ans]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,GotoIf($["${ARG1}"=""]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-ans.php ${ARG1} ${ARG2})
-exten => s,n(doret),Return
-;発信時のSlackへの通知(あまり重要視していない)
-[sub-slack-dout]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,Set(CIDNAME=${DB(cidname/${ARG1})})
-exten => s,n,GotoIf($["${CIDNAME}"!=""]?dogo)
-exten => s,n,Set(CIDNAME=不明)
-exten => s,n(dogo),System(php /var/lib/asterisk/slack/astslack-out.php ${ARG1} ${CIDNAME} ${ARG2} ${ARG3})
-exten => s,n(doret),Return
-;ダイヤルイン用ハングアップハンドラ
-;着信時の切断でSlackへ通知
-[di-afthang]
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,System(php /var/lib/asterisk/slack/astslack-dc.php ${CCIDNUM})
-exten => s,n(doret),Return
-;Slackラインキーサポート
-[sub-slack-key]
-;KEYID STATE
-exten => s,1,NoOp
-exten => s,n,GotoIf($["${DB(ABS/SLACK)}"!="1"]?doret)
-exten => s,n,GotoIf($["${ARG3}"="PENDING"]?noncid)
-exten => s,n,GotoIf($["${ARG2}"="OUTGOING"]?skipincid)
-exten => s,n,GotoIf($["${ARG2}"="NOT_INUSE"]?noncid)
-exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"="DISA"]?disacid)
-exten => s,n,Set(TCIDN=${DB(KEYTEL/KEYSYS${KID}/INCID)})
-exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
-exten => s,n,Goto(doexec)
-exten => s,n(skipincid),Set(TCIDN=${ARG3})
-exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
-exten => s,n,Goto(doexec)
-exten => s,n(disacid),Set(TCIDN=${DB(KEYTEL/KEYSYS${KID}/DISANUM)})
-exten => s,n,Set(TCIDM=${DB(cidname/${TCIDN})})
-exten => s,n,Goto(doexec)
-exten => s,n(noncid),Set(TCIDN="-")
-exten => s,n,Set(TCIDM="=")
-exten => s,n(doexec),System(php /var/lib/asterisk/slack/astslack-keystat.php ${ARG1} ${ARG2} ${TCIDN} ${TCIDM})
-exten => s,n(doret),Return
+;外部サービス連携(着信通知)
+[external-notify]
+exten => s,1,NoOp(着信通知連携)
+exten => s,n,NoOp(${ARG1})
+exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
+exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
+exten => s,n,Goto(do_slack)
+exten => s,n(noname),Set(TMP_CIDNAME=${ARG1})
+exten => s,n(do_slack),System(python3 /var/lib/asterisk/slack-notify.py ${ARG1} ${TMP_CIDNAME})
+exten => s,n,Return
 
 ;Experimental
 ;メッセージングサポート
