--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -41,17 +41,13 @@ exten => s,n,Set(CALLERID(name)=${CALLERID(num)})
 ;キーラベル取得
 exten => s,n(lnset),Set(KLBL=${DB(KEYTEL/KEYSYS${KID}/LABEL)})
 exten => s,n,Set(CALLERID(name)=${KLBL}${KID}:${DTN}${CALLERID(name)})
-;Slack連係
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/INCID)=${CALLERID(num)})
-exten => s,n,Gosub(sub-slack-in,s,1(${CCIDNUM},${CCIDNAME},"(${KID})${KLBL}",key${KID}))
 ;
 exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"="NOT_INUSE"]?ring)
 exten => s,n,Busy
 exten => s,n,Hangup
 ;DEVSTATEを鳴動中に
 exten => s,n(ring),Set(DEVICE_STATE(Custom:KEYSYS${KID})=RINGING)
-;Slack連携
-exten => s,n,Gosub(sub-slack-key,s,1(${KID},RINGING))
 ;鳴動チャネルを保存
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/ID)=${CHANNEL})
 ;ハングアップ後処理ハンドラ挿入
@@ -95,7 +91,6 @@ exten => s,n,Congestion
 exten => s,n,Hangup
 
 exten => s,n(outok),Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
-exten => s,n,Gosub(sub-slack-key,s,1(${KID},INUSE))
 exten => s,n,Gosub(macro-markme,s,1(${KID}))
 exten => s,n,Set(CHANNEL(hangup_handler_push)=ch-afthang,s,1(${KID}))
 ;経路をマーク
@@ -124,8 +119,6 @@ exten => s,n,Set(TPFX=${DB(ABS/TRUNK/PFX/${OUTTRUNK})})
 exten => s,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 ;回線種別取得
 exten => s,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
-;Slack連携
-exten => s,n,Gosub(sub-slack-dout,s,1(${DESTNUM},${EXT},外線${KID}))
 ;exten => s,n,Dial(${OUTTECH}/${TPFX}${DESTNUM}@${OUTTRUNK},${DIALOPT},U(macro-markyou^${KID}))
 exten => s,n,Dial(${OUTTECH}/${KPFX}${TPFX}${DESTNUM}@${OUTTRUNK},${DIALOPT},U(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
 exten => s,n(nogo),Hangup
@@ -136,8 +129,6 @@ exten => s,n(nogo),Hangup
 [macro-devschange]
 exten => s,1,NoOp
 exten => s,n,Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=${ARG2})
-;Slack連携
-exten => s,n,Gosub(sub-slack-key,s,1(${ARG1},${ARG2}))
 ;デバッグ用
 ;exten => s,n,DumpChan()
 exten => s,n,Return
@@ -166,14 +157,9 @@ exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"!="ONHOLD"]?backnu)
 exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"!="INCOMING"]?nochg)
 ;解放されたら未使用に
 exten => s,n(backnu),Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=NOT_INUSE)
-;Slack連携
-exten => s,n,Gosub(sub-slack-key,s,1(${ARG1},NOT_INUSE))
 ;解放された後にピア名を無しに
 ;PBX挙動時に誤ったピアがキーを確保するのを防止
 exten => s,n(nochg),Set(DB(KEYTEL/KEYSYS${ARG1}/PEER)=NONE)
-;着信時の切断でSlackへ通知
-exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"!="INCOMING"]?doret)
-exten => s,n,Gosub(sub-slack-dc,s,1(${CALLERID(num)}))
 exten => s,n(doret),Return
 
 ;######## 特殊処理ノード ########
@@ -251,9 +237,7 @@ exten => keyhandle-RINGING,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-RINGING,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
 ;ピックアップによりチャネルが成立するがロックは解除する
 exten => keyhandle-RINGING,n,Set(GLOBAL(TRLOCK)=0)
-;Slack連係テスト(キーで応答)
 exten => keyhandle-RINGING,n,Set(ICID=${DB(KEYTEL/KEYSYS${KID}/INCID)})
-exten => keyhandle-RINGING,n,Gosub(sub-slack-ans,s,1(${ICID} ${EXT}))
 ;鳴動中のキーをピックアップ
 exten => keyhandle-RINGING,n,PickUpChan(Local/dummy${KID}@ringnode)
 
@@ -269,8 +253,6 @@ exten => keyhandle-INUSE,n,ChannelRedirect(${DB(KEYTEL/KEYSYS${KID}/ID)},holdnod
 exten => keyhandle-INUSE,n,GotoIf($["${CHANNELREDIRECT_STATUS}"!="SUCCESS"]?noredir)
 ;DEVSTATEを保留状態に変更
 exten => keyhandle-INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=ONHOLD)
-;Slack連携
-exten => keyhandle-INUSE,n,Gosub(sub-slack-key,s,1(${KID},ONHOLD))
 ;再度ピアを自分のものに書き直し(この処理要る？？)
 exten => keyhandle-INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER)})
@@ -314,8 +296,6 @@ exten => keyhandle-ONHOLD,1,NoOp
 exten => keyhandle-ONHOLD,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-ONHOLD,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
 exten => keyhandle-ONHOLD,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
-;Slack連携
-exten => keyhandle-ONHOLD,n,Gosub(sub-slack-key,s,1(${KID},INUSE))
 ;ピックアップによりチャネルが成立するがロックは解除する
 exten => keyhandle-ONHOLD,n,Set(GLOBAL(TRLOCK)=0)
 ;保留中のキーをピックアップする
@@ -326,8 +306,6 @@ exten => keyhandle-ONHOLD,n,PickUpChan(Local/rhold${KID}@holdnode)
 exten => keyhandle-NOT_INUSE,1,NoOp
 ;該当キーを使用中に
 exten => keyhandle-NOT_INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
-;Slack連携
-exten => keyhandle-NOT_INUSE,n,Gosub(sub-slack-key,s,1(${KID},OUTGOING,PENDING))
 ;通話中のピアを自局にセット
 exten => keyhandle-NOT_INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-NOT_INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
@@ -345,8 +323,6 @@ exten => h,1,NoOp
 exten => h,n,GotoIf($["${STAT}"="WASDISA"]?cleanup,1)
 ;DISAで何も実行しなかった場合のクリーンナップ
 exten => cleanup,1,Set(DEVICE_STATE(Custom:KEYSYS${KID})=NOT_INUSE)
-;Slack連携
-exten => cleanup,n,Gosub(sub-slack-key,s,1(${KID},NOT_INUSE,PENDING))
 exten => cleanup,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=NONE)
 
 ;キーハンドラ終了時に排他解除するマクロ
@@ -519,8 +495,6 @@ exten => _X.,n,Set(CALLERID(name)=${OGCID})
 ;発信処理
 exten => _X.,n,NoOp(発信開始)
 exten => _X.,n,Set(_THISPOSITION=OUTBOUND)
-;Slack連携
-exten => _X.,n,Gosub(sub-slack-key,s,1,(${KID},OUTGOING,${EXTEN}))
 ;相手先CID強制設定
 exten => _X.,n,Gosub(macro-cndid,s,1(${KID},${EXTEN}))
 ;トランクプレフィクス取得
@@ -531,8 +505,6 @@ exten => _X.,n,Set(KPFX=${DB(KEYTEL/KEYSYS${KID}/PFX)})
 exten => _X.,n,Set(LTYP=${DB(KEYTEL/KEYSYS${KID}/TYP)})
 ;発信先番号保持
 exten => _X.,n,Set(DB(KEYTEL/KEYSYS${KID}/DISANUM)=${EXTEN})
-;Slack連携
-exten => _X.,n,Gosub(sub-slack-dout,s,1(${EXTEN},${ME},${KLBL}${KID}))
 ;exten => _X.,n,Dial(${OUTTECH}/${EXTEN}@${OUTTRUNK},,U(macro-markyou^${KID}))
 exten => _X.,n,Dial(${OUTTECH}/${KPFX}${TPFX}${EXTEN}@${OUTTRUNK},,XU(macro-markyou^${KID})b(add-ppiheader^addp^1(${OGCID},${LTYP},${OUTTECH})) )
 ;メモ用に残し。GWによってはこのタイプが必要なケースがある。
@@ -561,7 +533,7 @@ exten => _kcall[1-9],n,Set(EXT=${RNG})
 exten => _kcall[1-9],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall[1-9],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall[1-9],n,Gosub(macro-getexttech,s,1)
-exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1)U(macro-slackexten,s,1))
+exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
 exten => _kcall[1-9],n(donothing),NoOp
 ;10-16スロット用
 exten => _kcall1[0-6],1,NoOp(キー着信${EXTEN:5:2})
@@ -582,7 +554,7 @@ exten => _kcall1[0-6],n,Set(EXT=${RNG})
 exten => _kcall1[0-6],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall1[0-6],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall1[0-6],n,Gosub(macro-getexttech,s,1)
-exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1)U(macro-slackexten,s,1))
+exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
 exten => _kcall1[0-6],n(donothing),NoOp
 
 ;PJSIP,SIPで発信時にPPIを設定するためのルーチン(Dialから呼ばれる)
