--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -373,11 +373,16 @@ exten => s,n,Return
 ;外部サービス連携(着信通知)
 [external-notify]
 exten => s,1,NoOp(着信通知連携)
+;外部連携を使いたい場合は以下をコメントアウト
+exten => s,n,Return
+;着信通知を外部連携させるサンプル
+;CIDを参照しCIDと名前をセット
 exten => s,n,NoOp(${ARG1})
 exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
 exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
 exten => s,n,Goto(do_slack)
 exten => s,n(noname),Set(TMP_CIDNAME=${ARG1})
+;Slackに着信通知を送る
 exten => s,n(do_slack),System(python3 /var/lib/asterisk/slack-notify.py ${ARG1} ${TMP_CIDNAME})
 exten => s,n,Return
 
