add remote exten functions

--- a/exten/extensions_fixedpark.conf
+++ b/exten/extensions_fixedpark.conf
@@ -38,8 +38,10 @@ exten => _Park[1-8],n,Hangup
 
 ;BLFを持たない電話機用の機能コードショートカット
 exten => _*77[1-8],1,NoOp(パーク:${EXTEN})
+;リモートパーク時は内線存在チェックしない
+exten => _*77[1-8],n,GotoIf($["${RMPKOPT}"!=""]?pnext)
 exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
-exten => _*77[1-8],n,Set(PARKINGLOT=park${EXTEN:3})
+exten => _*77[1-8],n(pnext),Set(PARKINGLOT=park${EXTEN:3})
 exten => _*77[1-8],n,Set(TARGET=8${EXTEN:3}1)
 exten => _*77[1-8],n,NoOp(${TARGET})
 exten => _*77[1-8],n,NoOp(${DEVICE_STATE(park:${TARGET}@parkedcalls)})
@@ -49,5 +51,5 @@ exten => _*77[1-8],n,Hangup
 exten => _*77[1-8],n(dopark),NoOp(パーキング実行)
 exten => _*77[1-8],n,Answer()
 exten => _*77[1-8],n,SayNumber(${EXTEN:3})
-exten => _*77[1-8],n,Park(,s)
+exten => _*77[1-8],n,Park(,s${RMPKOPT})
 exten => _*77[1-8],n,Hangup
