--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -79,6 +79,8 @@ exten => _X.,n,Set(HERE=${DB(ABS/IOP/HERE)})
 exten => _X.,n,GotoIf($["${HERE}"!="${EXTEN:0:${DGT}}"]?nogo)
 ;ダイヤル先のピア名を取得
 exten => _X.,n,Set(EXT=${EXTEN:${DGT}})
+;リモートからのパーク使用の場合
+exten => _X.,n,GotoIf($["${EXT:0:3}"="*77"]?remotepark,${EXTEN},1)
 exten => _X.,n,Gosub(macro-ext2peer,s,1)
 exten => _X.,n,GotoIf($["${PEER}"!=""]?dodial)
 ;ピア名がなければ終了
