--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -57,6 +57,8 @@ exten => s,1,NoOp(内線番号からピア取得)
 exten => s,n,Set(PEER=${DB(ABS/EXT/${EXT})})
 ;G指定されている場合にはグループ
 exten => s,n,GotoIf($["${PEER:0:1}"="G"]?done)
+;R指定されている場合にはリモート内線
+exten => s,n,GotoIf($["${PEER:0:1}"="R"]?done)
 ;PJSIPの場合のピア取得しなおし
 exten => s,n,Gosub(macro-getexttech,s,1)
 exten => s,n,GotoIf($["${EXTTECH}"!="PJSIP"]?done)
