--- a/exten/extensions_outgoing.conf
+++ b/exten/extensions_outgoing.conf
@@ -2,8 +2,11 @@
 ;PFNN=プレフィクス1or2
 [prefixout]
 exten => _X.,1,NoOp(プレフィクス${PFNN}発信)
+;C2C発信なら内線存在確認しない
+exten => _X.,n,GotoIf($["${C2COUT}"="YESC2C"]?c2nchk1)
 exten => _X.,n,Gosub(macro-extcheck,s,1)
-exten => _X.,n,Set(KEY=${DB(ABS/OGP${PFNN}/KEY)})
+;
+exten => _X.,n(c2nchk1),Set(KEY=${DB(ABS/OGP${PFNN}/KEY)})
 exten => _X.,n,Set(PFX=${DB(ABS/OGP${PFNN})})
 exten => _X.,n,Set(PFL=${LEN(${PFX})})
 exten => _X.,n,Set(DESTNUM=${EXTEN:${PFL}})
@@ -40,8 +43,10 @@ exten => s,n,Set(TECH=${DB(ABS/NKS${PFNN}/TECH)})
 exten => s,n,Set(TRUNK=${DB(ABS/NKS${PFNN}/TRUNK)})
 exten => s,n,Set(LTYP=${DB(ABS/NKS${PFNN}/TYP)})
 ;権限チェック
+;C2Cなら飛ばす
+exten => s,n,GotoIf($["${C2COUT}"="YESC2C"]?c2nchk)
 exten => s,n,Gosub(macro-chkrestrict,s,1(2))
-exten => s,n,Gosub(macro-acccheck,s,1)
+exten => s,n(c2nchk),Gosub(macro-acccheck,s,1)
 ;発信CID設定
 exten => s,n,Gosub(macro-whoami,s,1)
 ;トランクのCIDがある場合には上書きする
@@ -85,7 +90,10 @@ exten => _X.,n,Set(TECH=${DB(ABS/IOP/${SNO}/TECH)})
 exten => _X.,n,Set(HERE=${DB(ABS/IOP/HERE)})
 exten => _X.,n,Set(CALLERID(num)=${HERE}${ME})
 exten => _X.,n,Set(CALLERID(name)=${DB(ABS/IOP/${HERE}/NAME)}${ME})
+;リモートパークでの呼び戻しなら規制チェックしない
+exten => _X.,n,GotoIf($["${TORET}"!=""]?dialgo)
+;規制チェック
 exten => _X.,n,Gosub(macro-chkrestrict,s,1(1))
 ;ダイヤル時には拠点番号を付けたままでダイヤルする
-exten => _X.,n,Dial(${TECH}/${SNO}${TGT}@${TRUNK})
+exten => _X.,n(dialgo),Dial(${TECH}/${SNO}${TGT}@${TRUNK})
 exten => _X.,n(nogo),Congestion
