add qpm notification

--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -376,14 +376,26 @@ exten => s,n,Return
 
 ;外部サービス連携(着信通知)
 [external-notify]
-exten => s,1,NoOp(着信通知連携)
-exten => s,n,NoOp(${ARG1})
-exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
-exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
-exten => s,n,Goto(do_slack)
-exten => s,n(noname),Set(TMP_CIDNAME=${ARG1})
-exten => s,n(do_slack),System(python3 /var/lib/asterisk/slack-notify.py ${ARG1} ${TMP_CIDNAME})
+exten => s,1,NoOp(何もしない)
 exten => s,n,Return
+
+;exten => s,1,NoOp(着信通知連携-QPM)
+;exten => s,n,NoOp(${ARG1})
+;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
+;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
+;exten => s,n,Goto(do_qpmnc)
+;exten => s,n(noname),Set(TMP_CIDNAME="")
+;exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
+;exten => s,n,Return
+
+;exten => s,1,NoOp(着信通知連携-slack)
+;exten => s,n,NoOp(${ARG1})
+;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
+;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
+;exten => s,n,Goto(do_slack)
+;exten => s,n(noname),Set(TMP_CIDNAME=${ARG1})
+;exten => s,n(do_slack),System(python3 /var/lib/asterisk/slack-notify.py ${ARG1} ${TMP_CIDNAME})
+;exten => s,n,Return
 
 ;Experimental
 ;メッセージングサポート
