--- a/exten/extensions.conf
+++ b/exten/extensions.conf
@@ -42,11 +42,8 @@ include => ext-tests
 ;デモ用
 #include extensions_demo.conf
 
+;Click-to-Call要
+#include extensions_c2c.conf
+
 ;テスト用
 #include extensions_tests.conf
-
-[demo1]
-exten => dial-out,1,NoOp
-exten => dial-out,n,Set(CALLERID(all)=300)
-exten => dial-out,n,Dial(SIP/phone3)
-
