--- a/exten/extensions_c2c.conf
+++ b/exten/extensions_c2c.conf
@@ -16,6 +16,21 @@ exten => _X.,n,Set(CALLERID(name)=Click2Call)
 exten => _X.,n,Dial(${EXTTECH}/${PEER})
 exten => _X.,n(done),Hangup
 
+[c2c-inhouse]
+exten => _X.,1,NoOp(C2C_INSIDE)
+exten => _X.,n,Set(EXT=${EXTEN})
+exten => _X.,n,GoSub(macro-ext2peer,s,1)
+;内線側のピアチェック
+exten => _X.,n,GotoIf($["${PEER}"=""]?done)
+;内線側の規正情報チェック
+exten => _X.,n,Set(TGT=${CUT(PEER,/,1)})
+exten => _X.,n,Set(LMT=${DB(ABS/LMT/${TGT})})
+;発信不可なら切断する
+exten => _X.,n,GotoIf($["${LMT}"=""]?done)
+exten => _X.,n,GotoIf($[${LMT}<1]?done)
+;C2Cの場合はオリジネータはABS
+exten => _X.,n,Dial(${EXTTECH}/${PEER})
+exten => _X.,n(done),Hangup
 
 [c2c-outside]
 exten => _X.,1,NoOp(C2Cプレフィクス発信)
