remove peer check from

--- a/exten/extensions_fixedpark.conf
+++ b/exten/extensions_fixedpark.conf
@@ -22,7 +22,7 @@ exten => *778,hint,park:881@parkedcalls
 
 ;BLFが押された場合の処理
 exten => _Park[1-8],1,NoOp(パーク:${EXTEN})
-exten => _Park[1-8],n,Gosub(macro-extcheck,s,1)
+;exten => _Park[1-8],n,Gosub(macro-extcheck,s,1)
 exten => _Park[1-8],n,Set(PARKINGLOT=park${EXTEN:4})
 exten => _Park[1-8],n,Set(TARGET=8${EXTEN:4}1)
 exten => _Park[1-8],n,NoOp(${TARGET})
@@ -40,7 +40,7 @@ exten => _Park[1-8],n,Hangup
 exten => _*77[1-8],1,NoOp(パーク:${EXTEN})
 ;リモートパーク時は内線存在チェックしない
 exten => _*77[1-8],n,GotoIf($["${RMPKOPT}"!=""]?pnext)
-exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
+;exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
 exten => _*77[1-8],n(pnext),Set(PARKINGLOT=park${EXTEN:3})
 exten => _*77[1-8],n,Set(TARGET=8${EXTEN:3}1)
 exten => _*77[1-8],n,NoOp(${TARGET})
