support some phone situation

--- a/exten/extensions_fixedpark.conf
+++ b/exten/extensions_fixedpark.conf
@@ -22,8 +22,11 @@ exten => *778,hint,park:881@parkedcalls
 
 ;BLFが押された場合の処理
 exten => _Park[1-8],1,NoOp(パーク:${EXTEN})
-;exten => _Park[1-8],n,Gosub(macro-extcheck,s,1)
-exten => _Park[1-8],n,Set(PARKINGLOT=park${EXTEN:4})
+;「ここ」へ転送された場合には内線チェックしない(GSファーム対応)
+exten => _Park[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt1)
+;内線チェック
+exten => _Park[1-8],n,Gosub(macro-extcheck,s,1)
+exten => _Park[1-8],n(pnxt1),Set(PARKINGLOT=park${EXTEN:4})
 exten => _Park[1-8],n,Set(TARGET=8${EXTEN:4}1)
 exten => _Park[1-8],n,NoOp(${TARGET})
 exten => _Park[1-8],n,NoOp(${DEVICE_STATE(park:${TARGET}@parkedcalls)})
@@ -32,16 +35,19 @@ exten => _Park[1-8],n,Goto(parkedcalls,${TARGET},1)
 exten => _Park[1-8],n,Hangup
 exten => _Park[1-8],n(dopark),NoOp(パーキング実行)
 exten => _Park[1-8],n,Answer()
+;転送時には相手に番号読み上げを出さない
+exten => _Park[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt2)
 exten => _Park[1-8],n,SayNumber(${EXTEN:4})
-exten => _Park[1-8],n,Park(,s)
+exten => _Park[1-8],n(pnxt2),Park(,s)
 exten => _Park[1-8],n,Hangup
 
 ;BLFを持たない電話機用の機能コードショートカット
 exten => _*77[1-8],1,NoOp(パーク:${EXTEN})
 ;リモートパーク時は内線存在チェックしない
-exten => _*77[1-8],n,GotoIf($["${RMPKOPT}"!=""]?pnext)
-;exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
-exten => _*77[1-8],n(pnext),Set(PARKINGLOT=park${EXTEN:3})
+exten => _*77[1-8],n,GotoIf($["${RMPKOPT}"!=""]?pnxt1)
+exten => _*77[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt1)
+exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
+exten => _*77[1-8],n(pnxt1),Set(PARKINGLOT=park${EXTEN:3})
 exten => _*77[1-8],n,Set(TARGET=8${EXTEN:3}1)
 exten => _*77[1-8],n,NoOp(${TARGET})
 exten => _*77[1-8],n,NoOp(${DEVICE_STATE(park:${TARGET}@parkedcalls)})
@@ -50,6 +56,7 @@ exten => _*77[1-8],n,Goto(parkedcalls,${TARGET},1)
 exten => _*77[1-8],n,Hangup
 exten => _*77[1-8],n(dopark),NoOp(パーキング実行)
 exten => _*77[1-8],n,Answer()
+exten => _*77[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt2)
 exten => _*77[1-8],n,SayNumber(${EXTEN:3})
-exten => _*77[1-8],n,Park(,s${RMPKOPT})
+exten => _*77[1-8],n(pnxt2),Park(,s${RMPKOPT})
 exten => _*77[1-8],n,Hangup
